Исходники в папке src. Сборка попадает в Git. Шаблон index.html

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -6,8 +6,10 @@
 
 // global head blocks
 @import "blocks/page.scss";
+@import "blocks/page-header.scss";
 
 // content blocks
 @import "blocks/content.scss";
 
 // global footer blocks
+@import "blocks/page-footer.scss";
