Текущие улучшения и обновления

--- a/src/sass/global/vars.scss
+++ b/src/sass/global/vars.scss
@@ -1,8 +1,6 @@
-$blue-decor-color: #81b3d2;
-$controls-color: #e5e5e5;
-$text-note-color: #333333;
-$default-bg-color: #f2f2f2;
+// Colors
 
+// Breakpoints
 $tablet-widths: #{"(min-width: 768px)"};
 $desktop-widths: #{"(min-width: 1200px)"};
 $mobile-only: #{"(max-width: 767px)"};
