--- a/src/sass/blocks/page.scss
+++ b/src/sass/blocks/page.scss
@@ -1,10 +1,10 @@
 .page__body {
   min-width: 320px;
   max-width: 100%;
+  margin: 0;
   overflow-x: hidden;
   font-family: "PT Sans", "Arial", sans-serif;
   font-size: 14px;
-  background-color: $default-bg-color;
 
   &--fixed {
     overflow: hidden;
